2007-02-12 Ales Hvezda   <ahvezda@geda.seul.org>

	* wiki/: Updated wiki snapshot from the live gEDA wiki.  Phase I 
   	(only changed content; new content coming in next phase).
	
	* wiki/: Added new content. Phase II (only new content; all makefiles
	still need to be updated; next phase).

	* scripts/copywip.sh: Added some incomplete logic to copy new content
	from wip to wiki (only works on level 1 and level 2 directories)

	* wiki/: Updated Makefile.am files with new content.  

2007-02-10 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped package version to 20070216.

2006-10-29 Ales Hvezda   <ahvezda@geda.seul.org>

	* fileformats, gnetlist, gschem, hooks, keymapping, netattrib,
	pads_backannotate, spice-sdb, switcap, symbols, templates,
	tragesym_tutorial: Removed all obsolete documentation from CVS.
	The wiki and the wiki snapshot is now the official documentation.

	* attributes, cascade: Removed more obsolete documentation from CVS.

2006-10-20 Ales Hvezda   <ahvezda@geda.seul.org>

	* configure.ac: Bumped package version to 20061020.

	* wiki/*: Updated tarball copy of the wiki from the geda.seul.org
	wiki.  Lots of various updates (many thanks to various people)
	and now the tragesym tutorial (Thanks Werner) is now part of
	the official documentation.

	* scripts/copywip.sh, wikicommit.sh: Added a new script that makes
	it easier to update changed files when updating the wiki
	documentation.  Tweak to wikicommit.sh to make it easier to verify
	that it is doing the right thing.

	* wiki/*/Makefile.am: Fixed up various Makefiles that didn't quite
	get created correctly because I didn't run the script in the right
	directory and the script has some hardcoded directories that were
	incorrect.  Need to fix that at some point.

2006-09-24 Ales Hvezda   <ahvezda@geda.seul.org>

	* AUTHORS: Updated file pointing people at gschem's AUTHOR file 
	as the complete list of authors.  Merged all listed files in this
	file into gschem's file.
