@@ -7,6 +7,12 @@ then
 	exit 1
 fi
 
+if [ ! -e "../scripts/removedups.sh" ]
+then
+	echo "../scripts/removedups.sh must exist"
+	exit 1
+fi
+
 files=`find . -name \*.html -print`
 
 for i in $files
@@ -21,13 +27,26 @@ do
 	isdetail=`echo $i | grep _detail`
 	if [ "$isdetail" = "" ] 
 	then
-		cat $i.old2 | sed 's%media="screen" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php"%media="screen" type="text/css" href="lib/exe/css"%g' | sed 's%media="print" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?print=1"%media="print" type="text/css" href="lib/exe/001css"%g' > $i
+		cat $i.old2 | \
+	sed 's%media="all" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?s=all"%media="all" type="text/css" href="lib/exe/css"%g' | \
+	sed 's%media="screen" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php"%media="screen" type="text/css" href="lib/exe/001css"%g' | \
+	sed 's%media="print" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?s=print"%media="print" type="text/css" href="lib/exe/002css"%g' \
+		> $i
 	else
-		cat $i.old2 | sed 's%media="screen" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php"%media="screen" type="text/css" href="../lib/exe/css"%g' | sed 's%media="print" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?print=1"%media="print" type="text/css" href="../lib/exe/001css"%g' > $i
+		cat $i.old2 | \
+	 sed 's%media="all" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?s=all"%media="all" type="text/css" href="../lib/exe/css"%g' | \
+	sed 's%media="screen" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php"%media="screen" type="text/css" href="../lib/exe/001css"%g' | \
+	sed 's%media="print" type="text/css" href="http://geda.seul.org/wiki/lib/exe/css.php?s=print"%media="print" type="text/css" href="../lib/exe/002css"%g' \
+		> $i
 	fi
 
 
 	rm -f $i.old2
 
 done
+
+# Remove duplicate images from _detail
+../scripts/removedups.sh 001
+../scripts/removedups.sh 002
+rm -f _media/001*.png _media/001*.jpg _media/002*.png _media/002*.jpg
 
